# polygon-offsetting

./: Cargo.toml  LICENSE  readme.md
examples/: example_offsetting.rs
src/: draw_svg.rs  lib.rs  polygon_offsetting.rs
