[package]
name = "polygon-offsetting"
version = "0.1.6"
edition = "2021"
license-file = "LICENSE"
description = "polygon offsetting crate"
repository = "https://github.com/Akirami/polygon-offsetting"
readme = "README.md"
keywords = ["polygon", "offset", "geometry", "2d"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

